; ModuleID = '/home/carl/AnghaBench/reactos/base/services/nfsd/extr_lock.c_get_lock_type.c'
source_filename = "/home/carl/AnghaBench/reactos/base/services/nfsd/extr_lock.c_get_lock_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@READ_LT = common dso_local global i32 0, align 4
@WRITE_LT = common dso_local global i32 0, align 4
@READW_LT = common dso_local global i32 0, align 4
@WRITEW_LT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64)* @get_lock_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_lock_type(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %16

7:                                                ; preds = %2
  %8 = load i64, i64* %3, align 8
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %7
  %11 = load i32, i32* @READ_LT, align 4
  br label %14

12:                                               ; preds = %7
  %13 = load i32, i32* @WRITE_LT, align 4
  br label %14

14:                                               ; preds = %12, %10
  %15 = phi i32 [ %11, %10 ], [ %13, %12 ]
  br label %25

16:                                               ; preds = %2
  %17 = load i64, i64* %3, align 8
  %18 = icmp eq i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %16
  %20 = load i32, i32* @READW_LT, align 4
  br label %23

21:                                               ; preds = %16
  %22 = load i32, i32* @WRITEW_LT, align 4
  br label %23

23:                                               ; preds = %21, %19
  %24 = phi i32 [ %20, %19 ], [ %22, %21 ]
  br label %25

25:                                               ; preds = %23, %14
  %26 = phi i32 [ %15, %14 ], [ %24, %23 ]
  ret i32 %26
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
